--- a/src/r/process_data_for_cbm.Rmd
+++ b/src/r/process_data_for_cbm.Rmd
@@ -12,22 +12,16 @@ This notebook processes scRNASeq time course data. Some of the code was adapted 
 First, we'll download several dependencies for data processing and data visualization.
 
 ```{r, include=FALSE}
-library(mgcv)
-library(splines)
 library(Seurat)
 library(dplyr)
 library(tidyr)
-library(viridis)
-library(matrixStats)
-library(UpSetR)
 library(reshape2)
 library(ggplot2)
 library(readxl)
 library(biomaRt)
 ```
 
-# 2. Load scRNASeq datasets
-
+# 2. Load scRNASeq dataset
 Next, we'll load the A549 dataset, which is the lung cancer cell line investigated in GSE147405. 
 ```{r, include=FALSE}
 # Linux
@@ -55,22 +49,7 @@ ids$time = a549_tgfb@meta.data$Time
 ids$cluster = a549_tgfb@active.ident
 ```
 
-## Map to gene identifiers
-Use BiomaRt to get Ensembl IDs map
-```{r}
-ensembl = useMart("ensembl", dataset="hsapiens_gene_ensembl")
-gene_ids = data.frame(colnames(a549_zscore))
-names(gene_ids) = "Gene"
-human_ids = getBM(attributes=c('ensembl_gene_id',
-                               'entrezgene_id',
-                               'hgnc_symbol'), 
-                  values=gene_ids,
-                  mart=ensembl)
-mapped_ids = merge(gene_ids, human_ids, 
-                   by.x='Gene', by.y='hgnc_symbol')
-```
-
-## Construct Ensembl Map
+## Preprocess the Z-score and p-value
 Now let's merge the MAGIC imputed data with the gene identifiers.
 ```{r}
 a549_zscore = data.frame(a549_zscore)
@@ -89,15 +68,31 @@ colnames(a549_zscore) = ids$time
 colnames(a549_pvalue) = ids$time
 ```
 
+# 4. Create a gene identifier map
+Use BiomaRt to get Ensembl IDs map
+```{r}
+ensembl = useMart("ensembl", dataset="hsapiens_gene_ensembl")
+gene_ids = data.frame(colnames(a549_zscore))
+names(gene_ids) = "Gene"
+human_ids = getBM(attributes=c('ensembl_gene_id',
+                               'entrezgene_id',
+                               'hgnc_symbol'), 
+                  values=gene_ids,
+                  mart=ensembl)
+mapped_ids = merge(gene_ids, human_ids, 
+                   by.x='Gene', by.y='hgnc_symbol')
+```
+
+# 5. Map to Ensembl identifiers
 Merge the data with gene identifiers
 ```{r}
 merged_zscore = merge(mapped_ids, a549_zscore, 
-                      by.x='Gene', by.y="row.names")
+                              by.x='Gene', by.y="row.names")
 merged_pvalue = merge(mapped_ids, a549_pvalue, 
-                      by.x='Gene', by.y="row.names")
+                              by.x='Gene', by.y="row.names")
 ```
 
-# 4. Save data
+# 6. Save Ensembl data
 ```{r}
 savepath = "D:/Analysis/EMT/mapped_magic_a549.xlsx"
 writexl::write_xlsx(
